Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-18788

BUG: unable to handle kernel NULL pointer dereference at expire_timers+0x6a

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.17.0
    • None
    • None
    • 3
    • 9223372036854775807

      [ 2249.430040] BUG: unable to handle kernel paging request at 000000000000a578
      [ 2249.430250] PGD 0 P4D 0 
      [ 2249.430278] Oops: 0002 [#1] PREEMPT SMP DEBUG_PAGEALLOC
      [ 2249.430327] CPU: 1 PID: 0 Comm: swapper/1 Tainted: G           O     --------- -  - 4.18.0 #12
      [ 2249.430408] Hardware name: QEMU Standard PC (i440FX + PIIX, 1996), BIOS 1.16.3-1.fc39 04/01/2014
      [ 2249.430488] RIP: 0010:expire_timers+0x6a/0x1b0
      [ 2249.430549] Code: 5d 40 0f 1f 44 00 00 65 8b 05 42 5f eb 7c 89 c0 49 0f a3 45 00 0f 82 e9 00 00 00 48 8b 03 48 8b 53 08 48 85 c0 48 89 02 74 04 <48> 89 50 08 f6 43 22 20 48 c7 43 08 00 00 00 00 48 89 ef 4c 89 3b
      [ 2249.430709] RSP: 0018:ffff9a92a3905ed8 EFLAGS: 00010002
      [ 2249.430756] RAX: 000000000000a570 RBX: ffff9a91455d9620 RCX: 0000000000000200
      [ 2249.430825] RDX: ffff9a92a3905f18 RSI: ffff9a92a3905f18 RDI: ffff9a92a3905ecf
      [ 2249.430910] RBP: ffff9a92a3931e40 R08: ffff9a91455d9620 R09: 0000000000000001
      [ 2249.430979] R10: ffff9a92a3931ea0 R11: ffff9a92a3905f20 R12: ffff9a92a3905f18
      [ 2249.431048] R13: ffffffff84596ac0 R14: 0000000000000001 R15: dead000000000200
      [ 2249.431117] FS:  0000000000000000(0000) GS:ffff9a92a3900000(0000) knlGS:0000000000000000
      [ 2249.431185] CS:  0010 DS: 0000 ES: 0000 CR0: 0000000080050033
      [ 2249.431243] CR2: 000000000000a578 CR3: 0000000106f44000 CR4: 0000000000350ea0
      [ 2249.431314] Call Trace:
      [ 2249.431364]  <IRQ>
      [ 2249.431391]  run_timer_softirq+0x88/0x150
      [ 2249.431428]  ? kvm_clock_read+0x14/0x30
      [ 2249.431465]  ? ktime_get+0xa4/0x150
      [ 2249.431501]  ? rcu_read_lock_held_common+0x9/0x30
      [ 2249.431569]  __do_softirq+0xd2/0x4cd
      [ 2249.431608]  irq_exit_rcu+0xda/0xe0
      [ 2249.431646]  irq_exit+0x5/0x20
      [ 2249.431683]  smp_apic_timer_interrupt+0xbf/0x290
      [ 2249.431731]  apic_timer_interrupt+0xf/0x20
      [ 2249.431768]  </IRQ>
      

            bzzz Alex Zhuravlev
            bzzz Alex Zhuravlev
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: