LU-18788 ptlrpc: cancel PM-QoS delayed work

PM-QoS request can be inactive, but this should not prevent cleanup
upon connection finalization.  otherwise the kernel may run the timer
when the module has been unloaded and hit oops:

BUG: unable to handle kernel paging request at 000000000000a578
Oops: 0002 [#1] PREEMPT SMP DEBUG_PAGEALLOC
CPU: 1 PID: 0 Comm: swapper/1
RIP: 0010:expire_timers+0x6a/0x1b0
...
Call Trace:
 <IRQ>
 run_timer_softirq+0x88/0x150
 __do_softirq+0xd2/0x4cd
 irq_exit_rcu+0xda/0xe0
 irq_exit+0x5/0x20
 smp_apic_timer_interrupt+0xbf/0x290
 apic_timer_interrupt+0xf/0x20
 </IRQ>

Fixes: 54a64ea818 ("LU-18446 ptlrpc: lower CPUs latency during client I/O")
Signed-off-by: Alex Zhuravlev <bzzz@whamcloud.com>
Change-Id: I6f93894290eb5aa6497c0dc39ce98dece38f9028
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/58354
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>
Reviewed-by: Bruno Faccini <bfaccini@nvidia.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>